--- a/doc/tutorial/variable_selection.Rnw
+++ b/doc/tutorial/variable_selection.Rnw
@@ -10,7 +10,7 @@ Quick start
 Classification example
 ......................
 
-Let's train a decision tree on the iris data and use a sequential forward search to find the best group of features.
+Let's train a decision tree on the ``iris`` data and use a sequential forward search to find the best group of features w.r.t. the **mmce** (mean misclassification error).
 
 <<>>=
 library("mlr")
@@ -27,7 +27,7 @@ sfSeq
 Regression example
 ..................
 
-We fit a simple linear regression model to the BostonHousing data set and use a genetic algorithm to find a feature set that reduces the MSE.
+We fit a simple linear regression model to the ``BostonHousing`` data set and use a genetic algorithm to find a feature set that reduces the **mse** (mean squared error).
 
 <<>>=
 library("mlbench")
