--- a/doc/tutorial/benchmark_experiments.Rnw
+++ b/doc/tutorial/benchmark_experiments.Rnw
@@ -14,11 +14,11 @@ In the so called "outer" cross-validation the data is split repeatedly
 into a (larger) training set and a (smaller) test set in the usual
 way. Now, in every outer iteration the learner is tuned on the
 training set by performing an "inner" cross-validation. The best found
-hyperparameters are selected, with these the learner is fitted to the
-complete "outer" training set and the resulting model is used to
-access the (outer) test set.  This results in much more reliable
-estimates of true performance distribution of the learner for unseen
-data.  These can now be used to estimate locations (e.g. of the mean
+hyperparameters are selected and afterwards used for fitting the learner 
+to the complete "outer" training set. The resulting model is used to
+access the (outer) test set. This results in much more reliable
+estimates of the true performance distribution of the learner for unseen
+data. These can now be used to estimate locations (e.g. of the mean
 or median performance value) and to compare learning methods in a fair
 way.
 
@@ -37,13 +37,13 @@ Example 1: One task, two learners, no tuning
 library("mlr")
 
 ## Classification task with iris data set 
-task <- makeClassifTask(data = iris, target = "Species")
+task = makeClassifTask(data = iris, target = "Species")
 
 ## Two learners to be compared 
-learners <- c("classif.lda", "classif.qda")
+learners = c("classif.lda", "classif.qda")
 
 ## Define cross-validation indices 
-rdesc <- makeResampleDescription("CV", iters = 5)
+rdesc = makeResampleDescription("CV", iters = 5)
 
 res <- bench.exp(learners, task, rdesc)
 @ 
@@ -76,26 +76,26 @@ our learner will be k-nearest-neighbor.
 
 <<eval=FALSE>>=
 ## Classification task with iris data set 
-task <- makeClassifTask(data = iris, target = "Species")
+task = makeClassifTask(data = iris, target = "Species")
 
 ## Range of hyperparameter k  
-ps <- makeParameterSet(makeDiscreteParameter("k", 1:5))
-ctrl <- makeTuneControlGrid(ranges = ps)
+ps = makeParameterSet(makeDiscreteParameter("k", 1:5))
+ctrl = makeTuneControlGrid(ranges = ps)
 
 ## Define "inner" cross-validation indices
-inner.rdesc <- makeResampleDesc("CV", iters = 3)   
+inner.rdesc = makeResampleDesc("CV", iters = 3)   
 
 ## Tune k-nearest-neighbor
-lrn <- makeTuneWrapper("classif.kknn",
+lrn = makeTuneWrapper("classif.kknn",
                                resampling = inner.rdesc, 
                                control = ctrl)
 
 ## Define "outer" bootstrap indices 
-rdesc <- makeResampleDesc("BS", iters = 5)
+rdesc = makeResampleDesc("BS", iters = 5)
 
 ## Merge it to a benchmark experiment 
 ## Choose accuracy instead of default measure mean misclassification error
-res <- bench.exp(lrn, task, rdesc, measure = acc)
+res = bench.exp(lrn, task, rdesc, measure = acc)
 	
 ## Which performances did we get in the single runs? 
 res["perf"]
@@ -124,34 +124,34 @@ data(BreastCancer)
 data(Vehicle)
 
 ## Classification task with three data sets 
-task1 <- makeClassifTask("Iris", data = iris, target = "Species")
-task2 <- makeClassifTask("Vehicle", data = Vehicle, target = "Class")
-task3 <- makeClassifTask("BreastCancer", data = na.omit(BreastCancer), 
+task1 = makeClassifTask("Iris", data = iris, target = "Species")
+task2 = makeClassifTask("Vehicle", data = Vehicle, target = "Class")
+task3 = makeClassifTask("BreastCancer", data = na.omit(BreastCancer), 
                          target = "Class", excluded = "Id")
 	
 ## Merge to one task
 tasks = list(task1 , task2 , task3)
 	
 ## Very small grid for SVM hyperparameters  
-ps <- makeParameterSet(makeDiscreteParameter("C", 2^seq(-1,1)), 
-                       makeDiscreteParameter("sigma", 2^seq(-1,1)))
-ctrl <- makeTuneControlGrid(ranges = ps)
+ps = makeParameterSet(makeDiscreteParameter("C", 2^seq(-1,1)), 
+                      makeDiscreteParameter("sigma", 2^seq(-1,1)))
+ctrl = makeTuneControlGrid(ranges = ps)
 
 ## Define "inner" cross-validation indices
-inner.rdesc <- makeResampleDesc("CV", iters = 3)   
+inner.rdesc = makeResampleDesc("CV", iters = 3)   
 
 ## Tune a SVM
-lrn <- makeTuneWrapper("classif.ksvm", method = "grid", resampling = inner.rdesc, 
+lrn = makeTuneWrapper("classif.ksvm", method = "grid", resampling = inner.rdesc, 
                        control = ctrl)
 
 ## Three learners to be compared 
-learners <- c("classif.lda", "classif.rpart", lrn)
+learners = c("classif.lda", "classif.rpart", lrn)
 
 ## Define "outer" cross-validation indices 
-rdesc <- makeResampleDesc("CV", iters = 5)
+rdesc = makeResampleDesc("CV", iters = 5)
 
 ## Merge it to a benchmark experiment 
-res <- bench.exp(learners, tasks, rdesc)
+res = bench.exp(learners, tasks, rdesc)
 	
 ## Only for one task
 res["perf", task = "Iris"]
@@ -177,25 +177,25 @@ a benchmark experiment:
 
 <<eval=FALSE>>=
 ## Classification task with iris data set 
-task <- makeClassifTask("iris", data=iris, target = "Species")  
+task = makeClassifTask("iris", data=iris, target = "Species")  
 	
 ## Control object for variable selection
-ctrl <- makeVarselControlSequential(beta = 100, method="sfs")
+ctrl = makeFeatselControlSequential(beta = 100, method="sfs")
 
 ## Inner resampling
-inner.rdesc <- makeResampleDesc("CV", iter=2)
+inner.rdesc = makeResampleDesc("CV", iter=2)
 
 ## Variable selection with Sequential Forward Search
-lrn <- makeVarselWrapper("classif.lda", resampling = inner.rdesc, control = ctrl)
+lrn = makeFeatselWrapper("classif.lda", resampling = inner.rdesc, control = ctrl)
 
 ## Let's compare two learners
-learners <- c("classif.rpart", lrn)
+learners = c("classif.rpart", lrn)
 
 ## Define outer resampling 
-rdesc <- makeResampleDesc("subsample", iter = 3)
+rdesc = makeResampleDesc("subsample", iter = 3)
 
 ## Merge to a benchmark experiment
-res <- bench.exp(tasks = task, learners = learners, resampling = rdesc)
+res = bench.exp(tasks = task, learners = learners, resampling = rdesc)
 	
 ## Which variables have been selected (in the outer resampling steps)?
 res["sel.var", learner="classif.lda"]
